# simple-threads-lab1-jogang0304

./: .clang-format  CMakeLists.txt  CMakePresets.json
include/: CircleAreaFinder.h  InputProcessor.h
src/: CircleAreaFinder.cpp  CircleAreaFinderMultithreaded.cpp  InputProcessor.cpp  main.cpp
